# 75.42-TP-grupal

./: OBq  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  install_wolfenstein.sh  pendientes.txt  server_config.yml
client_src/: Animation.cpp  Animation.h  BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  EventQueue.cpp  EventQueue.h  GameLoop.cpp  GameLoop.h  GameStatus.cpp  GameStatus.h  GameStatusMonitor.cpp  GameStatusMonitor.h  GameStatusQueue.cpp  GameStatusQueue.h  InputHandler.cpp  InputHandler.h  KeyboardState.cpp  KeyboardState.h  Makefile  MapDrawer.cpp  MapDrawer.h  RayCaster.cpp  RayCaster.h  Renderer.cpp  Renderer.h  ServerConnection.cpp  ServerConnection.h  ServerEventsReceiver.cpp  ServerEventsReceiver.h  ServerListener.cpp  ServerListener.h  Texture.cpp  Texture.h  UpdateQueue.h  Window.cpp  Window.h  main.cpp
client_src/event_handling/: CMakeLists.txt  EventSender.cpp  EventSender.h  GameInputHandler.cpp  GameInputHandler.h  GameStatusUpdater.cpp  GameStatusUpdater.h  InputHandler.cpp  InputHandler.h  KeyboardState.cpp  KeyboardState.h  MenuInputHandler.cpp  MenuInputHandler.h  MenuStatusUpdater.cpp  MenuStatusUpdater.h  Request.h  StatusUpdater.cpp  StatusUpdater.h  UpdateQueue.cpp  UpdateQueue.h  UpdateReceiver.cpp  UpdateReceiver.h
client_src/rendering/: Animation.cpp  Animation.h  CMakeLists.txt  EnemyComponent.cpp  EnemyComponent.h  EnemyEntity.cpp  EnemyEntity.h  Font.cpp  Font.h  GameRenderer.cpp  GameRenderer.h  MapDrawer.cpp  MapDrawer.h  MenuRenderer.cpp  MenuRenderer.h  MusicTrack.cpp  MusicTrack.h  PlayerWeapon.cpp  PlayerWeapon.h  Renderer.cpp  Renderer.h  SoundEffect.cpp  SoundEffect.h  StatisticsRenderer.cpp  StatisticsRenderer.h  Texture.cpp  Texture.h  TimedAnimation.cpp  TimedAnimation.h  UIDrawer.cpp  UIDrawer.h  Window.cpp  Window.h
common_src/: BlockingQueue.h  CMakeLists.txt  Client.cpp  Client.h  ClientGameStatusElements.h  ClientMessage.h  File.cpp  File.h  FiringState.h  GameListItem.h  GameStatus.cpp  GameStatus.h  ItemType.h  LobbyStatus.h  LobbyStatusData.h  Map.cpp  Map.h  MapData.h  MessageType.h  RayCaster.cpp  RayCaster.h  Server.cpp  Server.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  ThreadClient.cpp  ThreadClient.h  ThreadSend.cpp  ThreadSend.h  Vector.cpp  Vector.h  blocking_queue.h  main.cpp  protected_queue.h  respawn_event.cpp  respawn_event.h  shoot_event.cpp  shoot_event.h  (+6 more)
config/: client_config.yml
editor_src/: CMakeLists.txt  Map.cpp  door.cpp  door.h  gamemapgrid.cpp  gamemapgrid.h  itemfood.h  layoutitem.cpp  layoutitem.h  mainwindow.h  mainwindow.ui  newmapwindow.cpp
editor_src/WolfEditor/: CMakeLists.txt  Map.cpp  Map.h  WolfEditor.qrc  appstatus.cpp  editoritemserializer.cpp  editoritemserializer.h  gamemapgrid.cpp  gamemapgrid.h  itemametralladora.cpp  itemametralladora.h  itembarrel.cpp  itembarrel.h  itemblood.cpp  itemblood.h  itembullets.cpp  itembullets.h  itemcanion.cpp  itemcanion.h  itemdraggable.cpp  itemdraggable.h  itemfood.cpp  itemfood.h  itemkey.cpp  itemkey.h  itemmedkit.cpp  itemmedkit.h  itemspawnpoint.cpp  itemspawnpoint.h  itemtable.cpp  itemtable.h  itemtreasure.cpp  itemtreasure.h  itemwater.cpp  itemwater.h  layoutitem.cpp  layoutitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+8 more)
editor_src_bkp/: CMakeLists.txt  Map.h  appstatus.h  gamemapgrid.cpp  gamemapgrid.h  itemdraggable.cpp  itemdraggable.h  layoutitem.cpp  layoutitem.h  mainwindow.cpp  newmapwindow.h  (+1 more)
server_src/: CMakeLists.txt  action.cpp  action.h  client.cpp  client.h  game_status.cpp  game_status.h  main.cpp  move_backward.cpp  move_backward.h  move_forward.cpp  move_forward.h  move_left.cpp  move_left.h  move_right.cpp  move_right.h  server.cpp  server.h  server_clienttest.cpp  server_config.h  server_config_generator.cpp  server_main.cpp  shoot.cpp  shoot.h  thread_client.cpp  thread_client.h  thread_send.cpp  thread_send.h  vector.cpp  vector.h  wolfenstein-server-1.0.deb
server_src/actions/: MovementState.h  ShootingState.h  action.cpp  action.h  change_weapon_ametralladora.cpp  change_weapon_ametralladora.h  change_weapon_canion.cpp  change_weapon_canion.h  change_weapon_cuchillo.cpp  change_weapon_cuchillo.h  change_weapon_lanzacohetes.cpp  change_weapon_lanzacohetes.h  change_weapon_pistola.cpp  change_weapon_pistola.h  move_backward.cpp  move_backward.h  move_forward.cpp  move_forward.h  move_left.cpp  move_left.h  move_right.cpp  move_right.h  shoot.cpp  shoot.h  use_door.cpp  use_door.h
server_src/communication/: ReceiveClientMessages.cpp  ReceiveClientMessages.h  message.cpp  message.h  message_parser.cpp  message_parser.h  message_processor.cpp  message_processor.h  thread_acceptor.cpp  thread_acceptor.h  thread_client.cpp  thread_client.h
server_src/comunication/: message_parser.h  thread_acceptor.cpp  thread_acceptor.h  thread_client.h
server_src/games/: DoorSerializer.cpp  DoorSerializer.h  MapServer.cpp  MapServer.h  ServerStatus.cpp  ServerStatus.h  SpawnPoint.cpp  SpawnPoint.h  SpawnPointSerializer.cpp  SpawnPointSerializer.h  available_games.cpp  available_games.h  client_game_status.cpp  client_game_status.h  door.cpp  door.h  game_manager.cpp  game_manager.h  game_status.cpp  game_status.h  lobbyStatus.cpp  lobbyStatus.h  player.cpp  player.h  statistics.cpp  statistics.h  thread_game.cpp  thread_game.h  vector.cpp
server_src/items/: ItemSerializer.cpp  ItemSerializer.h  arma_ametralladora.cpp  arma_ametralladora.h  arma_canion.cpp  arma_canion.h  arma_lanzacohetes.cpp  arma_lanzacohetes.h  barrel.cpp  barrel.h  blood.cpp  blood.h  bullets.cpp  bullets.h  corpse.cpp  corpse.h  fake_item.cpp  fake_item.h  food.cpp  food.h  item.cpp  item.h  key.cpp  key.h  medkit.cpp  medkit.h  table.cpp  table.h  treasure.cpp  treasure.h  water.cpp  water.h
server_src/maps/: mapListItem.h  mapRepository.cpp  mapRepository.h
server_src/weapons/: ametralladora.cpp  ametralladora.h  arma.cpp  arma.h  canionDeCadena.cpp  canionDeCadena.h  cuchillo.cpp  cuchillo.h  lanzaCohetes.cpp  lanzaCohetes.h  pistola.cpp  pistola.h
server_src/wolfenstein-server-1.0/DEBIAN/: control
(+41 files in other folders)
